--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  drift: ^2.28.0
+  drift_flutter: ^0.2.4
+  flutter_riverpod: ^2.6.1
+  path_provider: ^2.1.5
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.5.4
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
+  drift_dev: ^2.28.0
 
 flutter:
   uses-material-design: true
