feat: add calendar view for tasks

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
+  syncfusion_flutter_calendar: ^30.1.40
 
 dev_dependencies:
   flutter_test:
