--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   syncfusion_flutter_calendar: ^30.1.40
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
