--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   syncfusion_flutter_calendar: ^30.1.40
   intl: ^0.20.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
